my coffee website

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav_logo">
                 <a href="index.html">
                     <img src="images/coffee_logo.png" alt="Coffee Logo">
-                    <h2>Coffee</h2>
+                    <h2>BEC Coffee</h2>
                 </a>
             </div>
 
